# bindery

./: .gitignore  Cargo.toml  README.md  justfile  rust-toolchain.toml
architecture/: 0001 - Core Functionality.md
crates/main/: Cargo.toml
crates/main/src/: error.rs  main.rs
crates/main/tests/: main_test.rs  mod.rs
