[workspace]
members = [
  "crates/*",
]
resolver = "3"

[workspace.dependencies]
fastrace = { version = "0.7.14" }
gpui = { git = "https://github.com/zed-industries/zed", tag = "v0.200.4" }

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-or-later"
authors = ["Nyefan"]
homepage = "https://github.com/Nyefan/bindery"
repository = "https://github.com/Nyefan/bindery"
readme = "README.md"
